# CoralEdgeTpu

./: CMakeLists.txt  Makefile  build.sh  build_tflite.sh  chats.txt  cmake_install.cmake  compilecommand.txt  detector  documentation_changes.patch  first_frame.ppm  geminipreviouschat.txt  geminireport.txt  logging_template  main.cpp  prompt  runlog.txt  tpumetrics.py
DAILYLOGS/: 19_nov_2025.txt  tpu_benchmark.csv  tpu_frame_latency.csv
flatbuffers/lib/cmake/flatbuffers/: FlatbuffersTargets.cmake
include/: pca9685.h
include/tensorflow/lite/tools/make/: Makefile
include/tensorflow/lite/tools/make/downloads/gemmlowp/fixedpoint/: fixedpoint.h
include/tensorflow/lite/tools/make/downloads/gemmlowp/public/: gemmlowp.h
include/tensorflow/lite/tools/make/downloads/ruy/ruy/: block_map.cc
lib/: libedgetpu.so.1
logs/: run-20251121-194623.json  run-20251121-195945.json  run-20251121-200517.json  run-20251121-201928.json  run-20251121-202555.json  run-20251121-202826.json  run-20251121-210536.json  run-20251121-210859.json  run-20251121-210952.json  run-20251121-212539.json  run-20251121-212542.json  run-20251121-212906.json  run-20251121-212909.json  run-20251121-214412.json  run-20251121-214414.json  run-20251121-215312.json  run-20251121-215624.json  run-20251121-220120.json  run-20251121-220153.json  run-20251121-220255.json  run-20251121-224426.json  run-20251121-224435.json  run-20251121-224646.json  run-20251122-110700.json  run-20251122-113847.json  run-20251122-115016.json
model/: README_model.txt
modernizeddockertpurunfile/: Dockerfile  Makefile  camera_producer_host  camera_producer_host.cpp  tpu_server.py
patches/: tflite-missing-includes.patch  tflite-sharedlib-make.patch
src/: camera_capture.cpp  camera_capture.h  inference.cpp  inference.h  inference_build_log.txt  inference_fix.patch  inference_run_log.txt  jpeg_wrapper.cpp  jpeg_wrapper.h  main.cpp  mjpeg_capture.cpp  mjpeg_capture.h  mjpeg_server.cpp  mjpeg_server.h  output_processor.cpp  output_processor.h  pca9685.cpp  pipeline_structs.h  previous_iteration_backup_maincpp.txt  process_supervisor.hpp  udp_sender.cpp  udp_sender.h  util_logging.cpp  util_logging.h
